--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prod": "yarn run build &yarn run preview",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-amplify": "^5.3.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -19,10 +23,12 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "amazon-cognito-identity-js": "^6.3.6",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
+    "sass": "^1.68.0",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   }
 }
