--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "antd": "^5.10.1",
     "aws-amplify": "^5.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.2",
-    "wouter": "^2.11.0"
+    "react-hook-form": "^7.47.0",
+    "wouter": "^2.11.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
