--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
     "uuid": "^9.0.1",
     "wouter": "^2.11.0"
